last updates for may

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Matthew Collett</title>
     <meta
       name="description"
-      content="A fifth-year software engineering student with a strong passion for problem solving, software, and its latest advancements."
+      content="A software engineer with a strong passion for problem solving, software, and its latest advancements."
     />
 
     <!-- Open Graph Meta Tags -->
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Matthew Collett" />
     <meta
       property="og:description"
-      content="A fifth-year software engineering student with a strong passion for problem solving, software, and its latest advancements."
+      content="A software engineer with a strong passion for problem solving, software, and its latest advancements."
     />
     <meta property="og:image" content="https://matthewcollett.ca/images/preview.jpg" />
 
