--- a/index.html
+++ b/index.html
@@ -1,34 +1,83 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matthew Collett</title>
-    <meta
-      name="description"
-      content="A software engineer with a strong passion for problem solving, software, and its latest advancements."
-    />
-
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://matthewcollett.ca" />
-    <meta property="og:title" content="Matthew Collett" />
-    <meta
-      property="og:description"
-      content="A software engineer with a strong passion for problem solving, software, and its latest advancements."
-    />
-    <meta property="og:image" content="https://matthewcollett.ca/images/preview.jpg" />
-
-    <!-- Favicons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png" />
-    <link rel="shortcut icon" href="/favicons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png" />
-    <link rel="manifest" href="/favicons/site.webmanifest" />
-    <meta name="apple-mobile-web-app-title" content="Matthew Collett" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Matthew Collett</title>
+  <meta
+    name="description"
+    content="A software engineer with a strong passion for problem solving, software, and its latest advancements."
+  />
+  <link rel="canonical" href="https://matthewcollett.ca/" />
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://matthewcollett.ca" />
+  <meta property="og:title" content="Matthew Collett" />
+  <meta
+    property="og:description"
+    content="A software engineer with a strong passion for problem solving, software, and its latest advancements."
+  />
+  <meta property="og:image" content="https://matthewcollett.ca/images/preview.jpg" />
+  <meta property="og:image:alt" content="Matthew Collett" />
+  <meta property="og:site_name" content="Matthew Collett" />
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Matthew Collett" />
+  <meta name="twitter:description" content="A software engineer with a strong passion for problem solving, software, and its latest advancements." />
+  <meta name="twitter:image" content="https://matthewcollett.ca/images/preview.jpg" />
+  
+  <!-- SEO Meta Tags -->
+  <meta name="author" content="Matthew Collett" />
+  <meta name="keywords" content="Matthew Collett, software engineer, Cloud Computing, Systems Design, React, Typescript, Go, Java, AWS" />
+  
+  <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
+  <link rel="shortcut icon" href="/favicons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
+  <link rel="manifest" href="/favicons/site.webmanifest" />
+  <meta name="apple-mobile-web-app-title" content="Matthew Collett" />
+  <meta name="theme-color" content="#031625" />
+  
+  <!-- Structured Data / JSON-LD -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Matthew Collett",
+      "url": "https://matthewcollett.ca",
+      "jobTitle": "Software Engineer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Sonrai Security"
+      },
+      "description": "A software engineer with a strong passion for problem solving, software, and its latest advancements.",
+      "sameAs": [
+        "https://github.com/matthew-collett",
+        "https://www.linkedin.com/in/matthew-collett"
+      ],
+      "knowsAbout": ["Cloud Computing", "Systems Design", "React", "Typescript", "Go", "Java", "AWS"]
+    }
+  </script>
+  
+  <!-- Preconnect to important domains -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx" defer></script>
+  <noscript>
+    <div style="text-align: center; padding: 2rem; font-family: 'Inter', sans-serif;">
+      <h1>Please enable JavaScript to view this website.</h1>
+      <p>
+        <a href="https://github.com/matthew-collett">GitHub</a> |
+        <a href="https://www.linkedin.com/in/matthew-collett">LinkedIn</a> |
+        <a href="mailto:matthew.collett12@gmail.com">Email</a>
+      </p>
+    </div>
+  </noscript>
+</body>
 </html>
