feat: Few updates and tweaks

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     property="og:description"
     content="A software engineer with a strong passion for problem solving, software, and its latest advancements."
   />
-  <meta property="og:image" content="https://matthewcollett.ca/images/preview.jpg" />
+  <meta property="og:image" content="https://matthewcollett.ca/images/og.png" />
   <meta property="og:image:alt" content="Matthew Collett" />
   <meta property="og:site_name" content="Matthew Collett" />
   
