fix: Update twitter og

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Matthew Collett" />
   <meta name="twitter:description" content="A software engineer with a strong passion for problem solving, software, and its latest advancements." />
-  <meta name="twitter:image" content="https://matthewcollett.ca/images/preview.jpg" />
+  <meta name="twitter:image" content="https://matthewcollett.ca/images/og.png" />
   
   <!-- SEO Meta Tags -->
   <meta name="author" content="Matthew Collett" />
